--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CryptoZendesk</title>
+    <title>Chaincare</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <title>ChainCare</title>
     <meta name="description" content="Seamless Support for Web3">
 
     <!-- Facebook Open Graph data -->
