avatar placeholder in chatroom & bootstrap btn primary changed

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -12,7 +12,7 @@ $font-size-base:         1rem;
 
 // Colors
 $body-color: $black;
-$primary:    $verydarkblue;
+$primary:    $lightblue;
 $success:    $green;
 $info:       $yellow;
 $danger:     $red;
