--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,8 +15,9 @@
            <%= link_to 'Pricing', pricing_path, class: "nav-link"%>
           </li>
           <li class="nav-item">
-            <%= link_to 'Get Support', new_ticket_path, class: "nav-link"%>
-
+            <% if user_signed_in? == false %>
+              <%= link_to 'Get Support', new_ticket_path, class: "nav-link"%>
+            <% end %>
           </li>
           <% if user_signed_in? %>
             <li class="nav-item active">
