--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -205,7 +205,7 @@
   width: 100vw;
   display: flex;
   justify-content: space-around;
-  align-items: center;
+  align-items: start;
   // background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), image-url("AdobeStock_584193934.jpeg");
   background-size: cover;
   background-position: center;
@@ -213,16 +213,20 @@
   h1 {
     color: white;
     font-weight: bold;
-    font-size: 45px;
+    font-size: 40px;
     text-shadow: 2px 2px 5px #0f1940;
   }
   p {
     color: white;
     // opacity: .8;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: lighter;
     margin-bottom: 30px;
     text-shadow: 2px 2px 8px #0f1940;
+  }
+
+  img {
+    margin-top: 10%;
   }
 
 }
