--- a/app/assets/stylesheets/pages/_navbar.scss
+++ b/app/assets/stylesheets/pages/_navbar.scss
@@ -8,7 +8,7 @@
   width: 100vw;
   padding-left: 5px;
   padding-right: 5px;
-  position:fixed;
+  position:relative;
 }
 
 .navbar button.navbar-toggler span.navbar-toggler-icon {
