--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,13 +2,16 @@
 
 <div class="banner">
    <div class="banner-content text-center">
+    <div class="mx-auto" style="max-width: 1000px">
+        <%= image_tag asset_path('ChainCare.png'), class: "mb-3"%>
        <h1>Seamless Support for Web3</h1>
         <p class=>Our customer support application makes it easier to use (Web 3) technologies.</p>
-        <p class>We provide real-time customer support and proactive solutions to help you navigate the complexities of Web3 technologies.</p>
+        <p class>Real-time customer support and proactive solutions to help you navigate the complexities of Web3 technologies.</p>
        <div class="d-flex justify-content-center">
         <%= link_to "Get Support", new_ticket_path, class: "btn btn-primary text-light btn-lg rounded shadow-sm mt-3 p-3 border border-light " %>
         <%# <%= link_to "Start Free Trial", new_ticket_path, class: "btn btn-primary text-light btn-lg rounded shadow-sm mt-3  my-3" %>
       </div>
+    </div>
  </div>
 
 <%= video_tag "Chaincare.webm", controls: false, autoplay: true, muted: true, loop: false, class: "fullscreen-bg-video", type: "video/webm" %>
