--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -16,7 +16,7 @@
       </div>
 
       <div class="col-12 col-lg-2" data-controller="close-ticket">
-        <%= button_to "Close Ticket", ticket_path(@chatroom.ticket), method: :patch, params: { ticket: { status: 'closed' } }, class: "btn btn-primary", style: "width: 100%", data: { action: "click->close-ticket#closeTicket"}%>
+        <%= button_to "Close Ticket", ticket_path(@chatroom.ticket), method: :patch, params: { ticket: { status: 'closed' } }, class: "btn btn-primary", style: "width: 100%"%>
       </div>
     </div>
 
