--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -45,6 +45,12 @@
           <div data-wallet-target="keplr" class="mx-5">Keplr Wallet</div>
         </div>
       </button>
+      <button data-action="click->wallet#xdefiConnect" class="btn btn-primary">
+        <div class="d-flex flex-column justify-content-center align-items-center">
+          <div><img height="30px" size="24" src="https://www.gitbook.com/cdn-cgi/image/width=256,dpr=2,height=40,fit=contain,format=auto/https%3A%2F%2F4266502175-files.gitbook.io%2F~%2Ffiles%2Fv0%2Fb%2Fgitbook-x-prod.appspot.com%2Fo%2Fspaces%252FV16jazlRl57seHanahS6%252Flogo%252FioIrYN9TYWHNeHKcyuhj%252Fimage%2520(2).jpg%3Falt%3Dmedia%26token%3D8c5b33e0-7098-47ae-b59c-f43945b753cb" alt="xdefi Logo"></div>
+          <div data-wallet-target="xdefi" class="mx-5">Xdefi Wallet</div>
+        </div>
+      </button>
   </section>
 
   <div data-wallet-target="overlay" data-action="click->wallet#closeModal" class="overlay hidden"></div>
