--- a/app/assets/stylesheets/components/_wallet.scss
+++ b/app/assets/stylesheets/components/_wallet.scss
@@ -23,8 +23,7 @@
   width: 450px;
   padding: 1.3rem;
   min-height: 250px;
-  position: absolute;
-  // top: 20%;
+  position: relative;
   background-color: white;
   border: 1px solid #ddd;
   border-radius: 15px;
