removes conflicting style in close button"

--- a/app/assets/stylesheets/components/_wallet.scss
+++ b/app/assets/stylesheets/components/_wallet.scss
@@ -60,12 +60,12 @@ button {
   // bottom: 150px;
 }
 
-.btn-close {
-  transform: translate(10px, -20px);
-  padding: 0.5rem 0.7rem;
-  background: #eee;
-  border-radius: 50%;
-}
+// .btn-close {
+//   transform: translate(10px, -20px);
+//   padding: 0.5rem 0.7rem;
+//   background: #eee;
+//   border-radius: 50%;
+// }
 
 .overlay {
   position: fixed;
