--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -11,7 +11,7 @@
 
   <section data-wallet-target="modal" class="modal hidden">
     <div class="flex">
-      <button data-wallet-target="buttonClose" data-action="click->wallet#closeModal" class="btn-close">X</button>
+      <button data-wallet-target="buttonClose" data-action="click->wallet#closeModal" class="btn-close"></button>
     </div>
 
 
