--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 60px;
+  min-height: 60px;
   padding: 0px 50px;
   color: $white;
   width: 100vw;
