--- a/app/views/pricing/show.html.erb
+++ b/app/views/pricing/show.html.erb
@@ -12,6 +12,7 @@
 .pricing-card {
   width: 300px;
   padding: 20px;
+  justify-content: evenly;
   text-align: center;
   background-color: #f5f5f5;
   border-radius: 5px;
