removes button if user support agent tickets/new

--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -73,7 +73,11 @@
     </div>
 
     <div class="form-actions">
+      <% if !current_user %>
       <%= f.button :submit, class:"btn btn-primary mt-3"%>
+      <% else %>
+        <p>Signed in as Support Agent</p>
+      <% end %>
     </div>
   <% end %>
 </div>
